--- a/Client/src/pages/Home/Home.css
+++ b/Client/src/pages/Home/Home.css
@@ -7,13 +7,9 @@
   padding-bottom: 30px;
 }
 .homeComponentContainer {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  margin: 0 50px;
-  border: 2px solid black;
+  margin: 0 50px; */
 }
 
-.homeButton {
-  display: flex;
-  justify-content: center;
-}
+
