--- a/Client/src/components/CurrentSchedule/CurrentSchedule.css
+++ b/Client/src/components/CurrentSchedule/CurrentSchedule.css
@@ -1,7 +1,34 @@
 .currentScheduleContainer {
+  display: flex;
+  flex-direction: column;
 }
 
-.currentScheduleDates {
+.currentScheduleForm {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-items: center;
+}
+
+.currentScheduleTable {
+  width: 700px;
+  border-right: 1px solid lightgray;
+  padding-right: 30px;
+}
+.currentScheduleCalendar {
+  width: 300px;
+  border: 1px solid #f0f0f0;
+  border-radius: 2px;
+  margin-left: 30px;
+}
+.currentScheduleButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.ant-radio-button-wrapper:first-child {
+  display: none;
+}
+.ant-radio-button-wrapper:last-child {
+  display: none;
 }
