--- a/Client/src/components/CurrentSchedule/CurrentSchedule.css
+++ b/Client/src/components/CurrentSchedule/CurrentSchedule.css
@@ -1,29 +1,54 @@
 .currentScheduleContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  
 }
 
 .currentScheduleForm {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 50px;
 }
-
+.currentTableTitle {
+  text-align: center;
+  margin-top: 20px;
+}
 .currentScheduleTable {
+  min-height: 410px;
   width: 700px;
-  border-right: 1px solid lightgray;
-  padding-right: 30px;
+  padding: 0 30px;
+  margin-left: 30px;
+  background-color: white;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .currentScheduleCalendar {
+  min-height: 410px;
   width: 300px;
   border: 1px solid #f0f0f0;
-  border-radius: 2px;
-  margin-left: 30px;
+  margin-right: 30px;
+  background-color: white;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .currentScheduleButton {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 .ant-radio-button-wrapper:first-child {
