--- a/Client/src/components/AdminSchedule/AdminSchedule.css
+++ b/Client/src/components/AdminSchedule/AdminSchedule.css
@@ -1,5 +1,8 @@
 .adminScheduleContainer {
-  margin: 0 50px;
+  height: 100vh;
+
+  padding: 0 50px;
+  background-color: #36454f;
 }
 .adminScheduleTitle {
   text-align: center;
@@ -11,6 +14,13 @@
   justify-content: space-around;
   margin-bottom: 50px;
 }
+.adminTable {
+  background-color: white;
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+
+}
+
 .adminIconArrows {
   display: flex;
   justify-content: space-around;
