--- a/Client/src/components/CurrentSchedule/CurrentSchedule.css
+++ b/Client/src/components/CurrentSchedule/CurrentSchedule.css
@@ -1,10 +1,12 @@
 .currentScheduleContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
+  background-color: #36454f;
+  background-size: cover;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .currentScheduleForm {
@@ -19,7 +21,7 @@
 }
 .currentScheduleTable {
   min-height: 410px;
-  width: 700px;
+  min-width: 820px;
   padding: 0 30px;
   margin-left: 30px;
   background-color: white;
@@ -61,4 +63,31 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+}
+
+@media screen and (max-width: 1300px) {
+  .currentScheduleForm {
+  }
+  .currentScheduleTable {
+    min-width: 0;
+
+    width: 60%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .currentScheduleContainer {
+  }
+  .currentScheduleForm {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .currentScheduleCalendar {
+    margin: 0;
+    margin: 30px 0;
+  }
+  .currentScheduleTable {
+    min-height: initial;
+    width: 90%;
+    margin: 0 0 20px 0;
+  }
 }
