--- a/Client/src/components/CurrentSchedule/CurrentSchedule.css
+++ b/Client/src/components/CurrentSchedule/CurrentSchedule.css
@@ -49,7 +49,7 @@
 }
 .currentScheduleButton {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 .ant-radio-button-wrapper:first-child {
